2003-07-20  Derek Price  <derek@ximbiot.com>

	* wrapper.c: Remove mention of obsolete -f and -t wrapper options from
	a comment.

2003-07-18  Derek Price  <derek@ximbiot.com>

	* sanity.sh (release): Add new tests for release with unrecognized
	recognized directories.

2003-07-18  Derek Price  <derek@ximbiot.com>

	* vers_ts (Version_TS): Don't allow command line keyword expansion
	modes to override binary mode.
	* sanity.sh (): Tests for the above.
	(Original patch from Dieter Maurer <dieter@handshake.de>.)

2003-07-16  Derek Price  <derek@ximbiot.com>

	* add.c: s/PROTO//.
	* admin.c: Ditto.
	* annotate.c: Ditto.
	* buffer.c: Ditto.
	* buffer.h: Ditto.
	* checkout.c: Ditto.
	* classify.c: Ditto.
	* client.c: Ditto.
	* client.h: Ditto.
	* commit.c: Ditto.
	* cvs.h: Ditto.
	* diff.c: Ditto.
	* edit.c: Ditto.
	* edit.h: Ditto.
	* entries.c: Ditto.
	* error.c: Ditto.
	* error.h: Ditto.
	* expand_path.c: Ditto.
	* fileattr.c: Ditto.
	* fileattr.h: Ditto.
	* filesubr.c: Ditto.
	* find_names.c: Ditto.
	* gssapi-client.c: Ditto.
	* gssapi-client.h: Ditto.
	* hardlink.h: Ditto.
	* hash.c: Ditto.
	* hash.h: Ditto.
	* history.c: Ditto.
	* import.c: Ditto.
	* kerberos4-client.h: Ditto.
	* lock.c: Ditto.
	* log-buffer.c: Ditto.
	* log-buffer.h: Ditto.
	* log.c: Ditto.
	* login.c: Ditto.
	* logmsg.c: Ditto.
	* mkmodules.c: Ditto.
	* modules.c: Ditto.
	* myndbm.c: Ditto.
	* myndbm.h: Ditto.
	* patch.c: Ditto.
	* rcs.c: Ditto.
	* rcs.h: Ditto.
	* rcscmds.c: Ditto.
	* recurse.c: Ditto.
	* release.c: Ditto.
	* remove.c: Ditto.
	* root.c: Ditto.
	* rsh-client.h: Ditto.
	* run.c: Ditto.
	* server.c: Ditto.
	* server.h: Ditto.
	* socket-client.c: Ditto.
	* socket-client.h: Ditto.
	* status.c: Ditto.
	* subr.c: Ditto.
	* tag.c: Ditto.
	* update.c: Ditto.
	* update.h: Ditto.
	* vers_ts.c: Ditto.
	* watch.c: Ditto.
	* watch.h: Ditto.
	* wrapper.c: Ditto.
	* zlib.c: Ditto.

2003-07-16  Derek Price  <derek@ximbiot.com>

	* cvs.h: Include pathmax.h.
